--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="#">Catálogo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Reportagens</a>
+                        <a class="nav-link" href="#">Reportagsens</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactos">Contactos</a>
