--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<!--scripts-------->
 		<!--JS------------->
 		<script src="https://kit.fontawesome.com/8a180405a8.js" crossorigin="anonymous"></script>
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
+		<script language="JavaScript" type="text/javascript" src="JS/mainJS.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 		
@@ -21,20 +22,55 @@
 	</head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Photus&Retratus</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<a class="navbar-brand" href="#"> Photus&ampRetratus </a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls "navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+						<a class="nav-link" id="navMap" href="#">Localização</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
+						<a class="nav-link" href="#">Contactos</a>
 					</li>
-				</div>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Imprima as suas fotos</a>
+					</li>
+				</ul>
 			</nav>
+			<div class="container">
+				<div class="row">
+					<div class="col" id="HOME">
+						
+					</div>
+				</div>
+				<div class="row">
+					<div class="col" id="AA">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12160.748391769901!2d-7.8559553!3d40.3603756!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3bf40b45ee127d7!2sPhotus%26Retratus!5e0!3m2!1spt-PT!2spt!4v1595344808189!5m2!1spt-PT!2spt" frameborder="1" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col" id="AA">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12160.748391769901!2d-7.8559553!3d40.3603756!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3bf40b45ee127d7!2sPhotus%26Retratus!5e0!3m2!1spt-PT!2spt!4v1595344808189!5m2!1spt-PT!2spt" frameborder="1" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col" id="AA">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12160.748391769901!2d-7.8559553!3d40.3603756!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3bf40b45ee127d7!2sPhotus%26Retratus!5e0!3m2!1spt-PT!2spt!4v1595344808189!5m2!1spt-PT!2spt" frameborder="1" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col" id="AA">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12160.748391769901!2d-7.8559553!3d40.3603756!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3bf40b45ee127d7!2sPhotus%26Retratus!5e0!3m2!1spt-PT!2spt!4v1595344808189!5m2!1spt-PT!2spt" frameborder="1" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col" id="MAP">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12160.748391769901!2d-7.8559553!3d40.3603756!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3bf40b45ee127d7!2sPhotus%26Retratus!5e0!3m2!1spt-PT!2spt!4v1595344808189!5m2!1spt-PT!2spt" frameborder="1" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					</div>
+				</div>
+			</div>
 		</body>
-	</html>
+	</html>					
