--- a/index.html
+++ b/index.html
@@ -43,7 +43,46 @@
 			<div class="container" id="Home">
 				<div class="row">
 					<div class="col">
-						
+						<div class="container-flow">
+							<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+								<ol class="carousel-indicators">
+									<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+									<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+									<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+								</ol>
+								<div class="carousel-inner">
+									<div class="carousel-item active">
+										<img class="d-block w-100" src="IMGS/HDR_Sem%20T%C3%ADtulo1.jpg" alt="First slide">
+										<div class="carousel-caption d-none d-md-block">
+											<h5>Teste1</h5>
+											<p>Teste2</p>
+										</div>
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="IMGS/HDR_Sem%20T%C3%ADtulo2.jpg" alt="Second slide">
+										<div class="carousel-caption d-none d-md-block">
+											<h5>Teste1</h5>
+											<p>Teste2</p>
+										</div>
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="IMGS/HDR_Sem%20T%C3%ADtulo3.jpg" alt="Third slide">
+										<div class="carousel-caption d-none d-md-block">
+											<h5>Teste1</h5>
+											<p>Teste2</p>
+										</div>
+									</div>
+								</div>
+								<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
+								</a>
+								<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+									<span class="carousel-control-next-icon" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								</a>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="row" id="Contactos">
@@ -62,21 +101,23 @@
 									<option hidden disabled selected value>Escolha</option>
 									<option value="message">Enviar mensagem</option>
 									<option value="print">Enviar fotografias</option>
-									<option value="schedule">Marcar encontro</option>
+									<option value="schedule">Marcar reunião</option>
 								</select>
 							</div>
 							<div id="nomeGroup" class="form-group">
 								<label for="name">Nome</label>
 								<input type="text" class="form-control" id="name" placeholder="O seu nome">
 							</div>
-							<div id="contacts" class="form-row">
-								<div class="col">
-									<label for="telephone">Telemovel</label>
-									<input type="text" class="form-control" id="telephone" placeholder="O seu numero de telemovel">
-								</div>
-								<div class="col">
-									<label for="email">Email</label>
-									<input type="text" class="form-control" id="email" placeholder="O seu email">
+							<div class="form-group">
+								<div id="contacts" class="form-row">
+									<div class="col">
+										<label for="telephone">Telemovel</label>
+										<input type="text" class="form-control" id="telephone" placeholder="O seu numero de telemovel">
+									</div>
+									<div class="col">
+										<label for="email">Email</label>
+										<input type="text" class="form-control" id="email" placeholder="O seu email">
+									</div>
 								</div>
 							</div>
 							<div id="message" style="display:none">
@@ -90,9 +131,27 @@
 									<textarea class="form-control" id="messageCorp" rows="5" style="resize:none"></textarea>
 								</div>
 							</div>
-							<div id="print" class="form-group">
+							<div class="form-group" id="print" style="display:none">
+								<div class="custom-file">
+									<label class="custom-file-label" for="fileSubmission">Escolha as fotografias para imprimir</label>
+									<input type="file" class="custom-file-input" id="fileSubmission" multiple>
+								</div>
 							</div>
-							<div id="schedule" class="form-group">
+							<div id="schedule" class="form-group" style="display:none">
+								<div class="form-group">
+									<label for="subjectMeeting">Assunto da reunião</label>
+									<input type="text" class="form-control" id="subjectMeeting" placeholder="Assunto da reunião">
+								</div>
+								<div id="date" class="form-row">
+									<div class="col">
+										<label for="day">Dia</label>
+										<input type="date" class="form-control" id="day">
+									</div>
+									<div class="col">
+										<label for="time">Hora</label>
+										<input type="time" class="form-control" id="time">
+									</div>
+								</div>
 							</div>
 							<div id="submit" class="form-group" style="display:none">
 								<button class="btn btn-primary" type="submit">Submeter</button>
@@ -106,4 +165,4 @@
 					</div>
 				</div>
 			</body>
-		</html>															
+		</html>																											
