--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -134,7 +134,7 @@
 						<input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
 						<input type="hidden" name="action" value="validate_captcha">
 						<div id="submit" class="form-group">
-							<button type="submit" class="btn btn-primary">Submit</button>
+						<input type="submit" class="btn btn-primary">Submit
 						</div>
 					</form>
 				</div>
