--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -133,7 +133,7 @@
 						</div>
 						<div id="submit" class="form-group">
 							<input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
-							<input type="submit" class="btn btn-primary">
+							<input type="submit" name="submit" class="btn btn-primary">
 						</div>
 					</form>
 				</div>
