--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -26,7 +26,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 		<!--Captcha3------->
-		<script src='https://www.google.com/recaptcha/api.js'></script>
+		<script src="https://www.google.com/recaptcha/api.js?render=6LfmF8AZAAAAAFNT2ytbglM2hGpeJif1CmZgZZXm"></script>
 		<!--Rest----------->
 		<title>Photus&amp;Retratus</title>
 	</head>
@@ -74,7 +74,7 @@
 			<div class="row">
 				<div class="col">
 					<h1>Fale connosco</h1>
-					<form id="contactForm" method="POST" name="form" action="PHP/form.php" enctype="multipart/form-data">
+					<form id="contactForm" method="POST" name="form" action="ction" enctype="multipart/form-data">
 						<div class="form-group">
 							<select name="formType" id="formType" class="form-control">
 								<option hidden disabled selected value>Escolha o tema de contacto</option>
