--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -74,7 +74,7 @@
 			<div class="row">
 				<div class="col">
 					<h1>Fale connosco</h1>
-					<form id="contactForm" method="POST" name="form" action="PHP/form.php" onsubmit="captcha()" enctype="multipart/form-data">
+					<form id="contactForm" method="POST" name="form" action="PHP/form.php" enctype="multipart/form-data">
 						<div class="form-group">
 							<select name="formType" id="formType" class="form-control">
 								<option hidden disabled selected value>Escolha o tema de contacto</option>
