--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -83,7 +83,7 @@
 								<option value="Schedule">Marcar reunião</option>
 							</select>
 						</div>
-						<div id="nomeGroup" class="form-group">
+						<div id="nameGroup" class="form-group">
 							<label for="names">Nome</label>
 							<input name="name" type="text" class="form-control" id="names" placeholder="O seu nome" required="required">
 						</div>
@@ -131,7 +131,7 @@
 								</div>
 							</div>
 						</div>
-						<div id="submit" class="form-group">
+						<div id="submit" class="form-group" style="display:none">
 							<input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
 							<input type="submit" name="submit" class="btn btn-primary">
 						</div>
