--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -32,7 +32,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#"> Photus&amp;Retratus </a>
+			<a class="navbar-brand" href="index.html"> Photus&amp;Retratus </a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -113,6 +113,7 @@
 							<div class="custom-file">
 								<label class="custom-file-label" for="fileSubmission">Escolha as fotografias para imprimir</label>
 								<input name="fileSubmission" type="file" class="custom-file-input" id="fileSubmission" multiple>
+								<input name="fileSubmission" type="file" class="custom-file-input" id="fileSubmission2" multiple>
 							</div>
 						</div>
 						<div id="formSchedule" class="form-group" style="display:none">
