--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -113,7 +113,7 @@
 							<div class="custom-file">
 								<label class="custom-file-label" for="fileSubmission">Escolha as fotografias para imprimir</label>
 								<input name="fileSubmission" type="file" class="custom-file-input" id="fileSubmission" multiple>
-								<input name="fileSubmission2" type="file" class="custom-file-input" id="fileSubmission2" multiple>
+								<input name="fileSubmission" type="file" class="custom-file-input" id="fileSubmission2" multiple>
 							</div>
 						</div>
 						<div id="formSchedule" class="form-group" style="display:none">
