--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -62,8 +62,7 @@
 						<li class="list-group-item">photuseretratus@gmail.com</li>
 					</ul>
 					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-map-marker" aria-hidden="true"></i></li>
-						<li class="list-group-item">Rua Doutor Adelino Júnior Mendes Abreu 2A, Oliveira do Hospital </li>
+						<li class="list-group-item"><i class="fa fa-map-marker" aria-hidden="true"></i>Rua Doutor Adelino Júnior Mendes Abreu 2A, Oliveira do Hospital </li>
 					</ul>
 				</div>
 				<div class="col" id="Map">
