--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -50,19 +50,19 @@
 				<div class="col" id="Contacts">
 					<h1>Contactos</h1>
 					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-phone" aria-hidden="true"></i></li>
+						<li class="list-group-item border-left-0 border-right-0 d-flex pl-0"><i class="fa fa-phone" aria-hidden="true"></i></li>
 						<li class="list-group-item">238 049 </li>
 					</ul>
 					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-mobile" aria-hidden="true"></i></li>
+						<li class="list-group-item border-left-0 border-right-0 d-flex pl-0"><i class="fa fa-mobile" aria-hidden="true"></i></li>
 						<li class="list-group-item">967 991 543 </li>
 					</ul>
 					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
+						<li class="list-group-item border-left-0 border-right-0 d-flex pl-0"><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
 						<li class="list-group-item">photuseretratus@gmail.com</li>
 					</ul>
 					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-map-marker" aria-hidden="true"></i></li>
+						<li class="list-group-item border-left-0 border-right-0 d-flex pl-0"><i class="fa fa-map-marker" aria-hidden="true"></i></li>
 						<li class="list-group-item">Rua Doutor Adelino Júnior Mendes Abreu 2A, Oliveira do Hospital </li>
 					</ul>
 				</div>
