--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -47,7 +47,7 @@
 		</nav>
 		<div class="container" id="Contacts">
 			<div class="row" id="Info">
-				<div class="col-sm" id="Contacts">
+				<div class="col-md" id="Contacts">
 					<h1>Contactos</h1>
 					<ul class="list-group list-group-horizontal">
 						<li class="list-group-item"><i class="fa fa-phone" aria-hidden="true"></i></li>
@@ -66,7 +66,7 @@
 						<li class="list-group-item">Rua Doutor Adelino Júnior Mendes Abreu 2A, Oliveira do Hospital </li>
 					</ul>
 				</div>
-				<div class="col-sm" id="Map">
+				<div class="col-md" id="Map">
 					<h1>Econtre-nos</h1>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12160.748391769901!2d-7.8559553!3d40.3603756!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3bf40b45ee127d7!2sPhotus%26Retratus!5e0!3m2!1spt-PT!2spt!4v1595344808189!5m2!1spt-PT!2spt" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				</div>
