--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -10,8 +10,8 @@
 		<!--Style---------->
 		<link rel="stylesheet" href="CSS/style.css" type="text/css">
 		<!--Bootstrap------>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 		
 		<!--Scripts-------->
 		<!--JS------------->
@@ -24,8 +24,7 @@
 		<!--FBPlugin------->
 		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v7.0" nonce="72qfw3Vp"></script>
 		<!--Bootstrap------>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		<!--Captcha3
 			<script src="https://www.google.com/recaptcha/api.js?render=6LfmF8AZAAAAAFNT2ytbglM2hGpeJif1CmZgZZXm"></script>
 		------->
@@ -50,7 +49,7 @@
 		<div class="container" id="Contacts">
 			<h1>Econtre-nos</h1>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-12">
 					<div class="ratio" style="--bs-aspect-ratio: 50%;" id="Map">
 						<iframe class= "embed-responsive-item"
 						frameborder="0" style="border:0"
@@ -60,9 +59,6 @@
 						allowfullscreen>
 						</iframe>
 					</div>
-				</div>
-				<div class="col-md-6">
-					TESTE2
 				</div>
 			</div>
 			<div class="row justify-content-center text-center" id="Info">
