bg dark in previous added contact section

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -89,7 +89,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container" id="Contacts">
+		<div class="container bg-dark text-white" id="Contacts">
 			<h1>Econtre-nos</h1>
 			<div class="row">
 				<div class="col-md-12">
