--- a/public_html/index.html
+++ b/public_html/index.html
@@ -78,15 +78,31 @@
 					<img src="assets/self.jpg">
 				</div>
 				<div class="col-lg-6 bg-dark text-white">
-					<h1>maya i maya o</h1>
+					<h1>JPG</h1>
 				</div>
 			</div>
 			<div class="row gx-0 mb-5 mb-lg-0">
 				<div class="col-lg-6 ">
 					<img src="assets/self.webp">
 				</div>
-				<div class="col-lg-6 order-lg-first">
-					<p>HA HA HA</p>
+				<div class="col-lg-6 bg-dark text-white">
+					<h1>WEBPG LOSSY</h1>
+				</div>
+			</div>
+			<div class="row gx-0 mb-5 mb-lg-0">
+				<div class="col-lg-6 ">
+					<img src="assets/self_L1.webp">
+				</div>
+				<div class="col-lg-6 bg-dark text-white">
+					<h1>WEBPG LOSSLESS 100Compression</h1>
+				</div>
+			</div>
+			<div class="row gx-0 mb-5 mb-lg-0">
+				<div class="col-lg-6 ">
+					<img src="assets/self_L0.webp">
+				</div>
+				<div class="col-lg-6 bg-dark text-white">
+					<h1>WEBPG LOSSLESS 0Compression</h1>
 				</div>
 			</div>
 		</div>
