--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 				</div>
 			</nav>
 			<header id="masthead">
-				<img src="assets/header.jpg">
+				<img src="https://ik.imagekit.io/minecopre/header.jpg">
 			</header>
 			<section class="about-section" id="About">
 				<div class="container px-4">
 					<div class="row gx-0 align-items-center">
 						<div class="col-lg-8">
-							<img class="img-fluid" src="assets/self.webp">
+							<img class="img-fluid" src="/assets/self.webp">
 						</div>
 						<div class="col" id="textCol">
 							<div class="featured-text text-center">
@@ -85,7 +85,7 @@
 				<div class="container px-4 text-center justify-content-center">
 					<div class="row gx-0 mb-5 mb-lg-0 ">
 						<div class="col-lg-6">
-							<img src="assets/self.jpg">
+							<img src="https://ik.imagekit.io/minecopre/self.jpg">
 						</div>
 						<div class="col-lg-6 bg-dark text-white">
 							<h1>JPG</h1>
@@ -93,7 +93,7 @@
 					</div>
 					<div class="row gx-0 mb-5 mb-lg-0">
 						<div class="col-lg-6 ">
-							<img src="assets/self.webp">
+							<img src="https://ik.imagekit.io/minecopre/self.webp">
 						</div>
 						<div class="col-lg-6 bg-dark text-white">
 							<h1>WEBPG LOSSY</h1>
@@ -101,7 +101,7 @@
 					</div>
 					<div class="row gx-0 mb-5 mb-lg-0">
 						<div class="col-lg-6 ">
-							<img src="assets/self_L1.webp">
+							<img src="https://ik.imagekit.io/minecopre/self_L1.webp">
 						</div>
 						<div class="col-lg-6 bg-dark text-white">
 							<h1>WEBPG LOSSLESS 100Compression</h1>
@@ -109,7 +109,7 @@
 					</div>
 					<div class="row gx-0 mb-5 mb-lg-0">
 						<div class="col-lg-6 ">
-							<img src="assets/self_L0.webp">
+							<img src="https://ik.imagekit.io/minecopre/self_L0.webp">
 						</div>
 						<div class="col-lg-6 bg-dark text-white">
 							<h1>WEBPG LOSSLESS 0Compression</h1>
