--- a/public_html/index.html
+++ b/public_html/index.html
@@ -61,14 +61,14 @@
 			</div>
 		</nav>
 		<header id="masthead">
-			<img class="img-fluid" alt="header.jpg">
+			<img class="img-fluid" alt="header">
 		</header>
 		<div id="main">
 			<section class="about-section" id="About">
 				<div class="container px-lg-4">
 					<div class="row gx-0 align-items-center">
 						<div class="col-lg-6">
-							<img class="img-fluid" alt="self.jpg">
+							<img class="img-fluid" alt="self">
 						</div>
 						<div class="col" id="textCol">
 							<div class="featured-text text-center m-1">
@@ -116,7 +116,7 @@
 		</div-->
 			</section>
 			<section class="contact-section hasBackgroundImage" id="Contact">
-				<img class="backgroundImage" alt="header.jpg">
+				<img class="backgroundImage" alt="header">
 				<div class="container px-4">
 					<div class="row gx-4 ">
 						<div class="col-12 col-xl-4 mb-3 mb-xl-0">
