--- a/public_html/index.html
+++ b/public_html/index.html
@@ -94,7 +94,7 @@
 
 					</div>
 				</div>
-				<div class="modal" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<!---div class="modal" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 					<div class="modal-dialog modal-fullscreen">
 						<div class="modal-content">
 							<div class="modal-body">
@@ -132,7 +132,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div--->
 			</section>
 			<section class="contact-section hasBackgroundImage" id="Contact">
 				<img class="backgroundImage" path="/" name="header">
